# statusbar_pi

./: .gitignore  CMakeLists.txt  README  README.md  StatusBar.fbp  VERSION.cmake  appveyor.yml
.circleci/: config.yml
OLD/: CMakeLists.txt.bak
OLD/libs/plugingl/src/: pidc.cpp
buildandroid/: build_android.cmake
ci/: circleci-build-android-armhf.sh
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginPackage.cmake
include/: OCPNColorPicker.h  StatusbarUI.h  icons.h  statusbar_pi.h  wxWTranslateCatalog.h
include/android/wx/: clrpicker.h  fontpicker.h
libs/plugingl/src/: pidc.cpp
manual/: antora.yml  site.yml
manual/modules/ROOT/pages/: index.adoc
manual/statusbar/: antora.yml  site.yml
manual/statusbar/modules/ROOT/pages/: statusbar.adoc
po/: POTFILES.in  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  he_IL.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  it_IT.po  ja.po  ja_JP.po  ko_KR.po  mr_IN.po  nb.po  nb_NO.po  nl.po  (+20 more)
src/: OCPNColorPicker.cpp  StatusbarUI.cpp  StatusbarUI.h  TexFont.cpp  TexFont.h  icons.cpp  icons.h  statusbar_pi.cpp  statusbar_pi.h
src/plugingl/: pidc.cpp  qtstylesheet.cpp
